feat(api, noticias, proyectos): agregar paginación, búsqueda y ordenamiento dinámico en endpoints del backend
- Se actualizó `NoticiaController` y `ProyectoController` para aceptar parámetros de búsqueda (`q`), página (`page`) y tamaño (`size`) desde las peticiones HTTP.
- Se implementó el soporte de paginación real en los servicios `NoticiaService` y `NoticiaServiceImpl` usando `PageRequest` de Spring Data.
- Se añadió funcionalidad de búsqueda por título mediante `findByTituloNoticiaContainingIgnoreCase` en `NoticiaRepository`.
- Se refactorizó la estructura de respuesta de los endpoints para devolver un objeto con `content`, `total`, `page` y `pages`.
- Se estandarizó el comportamiento de los listados de noticias y proyectos para mantener consistencia con el frontend.
- Mejora la mantenibilidad del código y la escalabilidad de la API para futuras implementaciones de filtrado y ordenamiento.